--- a/app/views/posts/often.html.erb
+++ b/app/views/posts/often.html.erb
@@ -1,9 +1,12 @@
 <div class="wrapper_1">
                 <div class="aboveposts">
                     <h2>よく見るページ</h2>
-                   <p><a href="/posts/bedit">
+                   <p><a href="/posts/oftenbedit">
                 編集する</a> </p>
                 </div>
+                <a href="/"><div class="newfix">
+                    <p>新規投稿</p>
+                </div></a>
                 
                 <div class="posts">
                 
