--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -8,14 +8,20 @@ form, input, div {
   margin: 0;
   padding: 0;
 }
+
+html {
+width:100%;
+
+}
+
 body {
     font-family: "游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", "メイリオ", sans-serif;
 }
 
 .header {
     color:white;
-    display:flex;
-     height:100px;
+    
+     height:140px;
     background-color: rgba(0,0,0,0.8);
 
 }
@@ -36,8 +42,12 @@ a{
     text-decoration: none;
 }
 
+.user a {
+    color: white;
+}
+
 .user {
-    width: 72vw;
+    width: 100%;
     display: flex;
     justify-content: flex-end;
     text-decoration:none;
@@ -53,7 +63,8 @@ a .post {
 
 
 .post, .login, .new{
-    margin-top: 60px;
+    margin-top: 10px;
+    margin-right:40px;
 }
 
 .post {
@@ -61,33 +72,40 @@ a .post {
     margin-right: 6vw;
 }
 
-.login {
-    
-    margin-left: 6vw;
+.postindex{
+    margin: 0px 20px;
 }
+
+
+
+
+.login {
+    width: 80px;
+    margin-right: 3vw;
+}
+
 
 
 h1 {
     font-family: "游ゴシック", YuGothic;
     text-align: left;
     font-weight: 100;
-    width: 800px;
-    height:216px;
+    height:200px;
     font-size: 50px;
-    margin: 0px auto 20px auto;
     line-height: 100px;
     
 }
 
 .question {
-    width: 100%;
+    width: 800px;
     height: 260px;
     padding: 80px 0 180px 0;
+    margin: 0 auto
 }
 
 .tidyup {
     width : 800px;
-    height: 200px;
+    height: 100px;
     margin: 20px auto 60px auto;
     position: relative;
 }
@@ -106,18 +124,25 @@ h1 {
 }
 
 .menu-new{
-    margin: 20px 20px;
+    margin: 0px 20px;
+    opacity:0.5;
+}
+
+.menu-new:hover {
+    opacity: 1;
 }
 
 .menus {
     display:flex;
     justify-content: flex-end;
     color: white;
+    padding-top:12px;
+    padding-right: 8px;
 }
 
 .menus a {
     color: white;
-    width: 200px;
+    width: 120px;
     height:80px;
 }
 
@@ -150,7 +175,7 @@ ul {
 
 .explanation {
     
-
+    padding-top: 40px;
     font-size: 12px;
     opacity:0.6;
     width: 800px;
@@ -182,7 +207,7 @@ li {
     width: 720px;
     height: 32px;
     position:absolute;
-    top: 80px;
+    top: 60px;
     left: 0;
     border: none;
     border-radius: 4px;
@@ -205,6 +230,11 @@ select {
     background-color: rgba(0,0,0,0.1)
 }
 
+::placeholder {
+    font-size: 12px;
+    font-family: "游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", "メイリオ", sans-serif;
+  }
+
 textarea {
     resize: none;
 }
@@ -212,7 +242,7 @@ textarea {
 .iconjpg{
     width: 140px;
     position: absolute;
-    top: -50px;
+    top: -54px;
     left: 760px;
 
     position: relative;
@@ -227,4 +257,8 @@ textarea {
     width: 100px;
     height: 110px;
     border-radius: 18px;
+}
+
+form {
+    height: 80px;
 }
