--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -2,9 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+//index
 
 .aboveposts {
-    width:1020px;
+    width:980px;
     height:200px;
     
     margin:0 auto;
@@ -18,7 +19,6 @@
 }
 
 .aboveposts p {
-    
     text-align: right;
     padding-top:40px;
     margin-right: 16px;
@@ -26,28 +26,36 @@
     font-size:32px;
 }
 
+.aboveposts p:hover{
+    opacity: 1;
+}
+
+.aboveposts a {
+    color:black;
+}
 
 .posts {
-    width: 1020px;
+    width: 980px;
     height: 800px;
     margin:0 auto;
     display: flex;
     flex-wrap: wrap;
+    align-content:flex-start;
+}
+
+.posts a {
+    height:160px;
+    color:black;
 }
 
 .posts-index-item {
-    width: 230px;
-    height: 160px;
+    width: 220px;
+    height: 140px;
     margin: 10px 10px;
     border-radius: 4px;
     border: 2px groove transparent;
     background-color: rgba(0, 0, 0, 0.1);
-    position: relative;
-}
-
-a {
-    text-decoration: none;
-    color:black;
+    position: relative;   
 }
 
 .post-contents {
@@ -59,16 +67,9 @@ a {
     font-size: 12px;
     opacity: 0.5;
     position: absolute;
-    top: 140px;
+    top: 120px;
     left: 8px;
 }
-
-.submit {
-    margin-left:56vw;
-    margin-top: 240px;
-}
-
-
 
 .menu_1 {
     width: 100vw;
@@ -111,7 +112,6 @@ li {
 
 .wrapper_2 {
     width: 100%;
-    height: 60vh;
 }
 
 .posts-show {
@@ -139,7 +139,7 @@ h4{
 
 .content {
     padding: 3vw 0px;
-    height:22vh;
+    height:vh;
 
 }
 
@@ -183,7 +183,6 @@ h4{
     top: 3vh;
     left: 50vw;
 }
-
 textarea {
     width: 44vw;
     height: 24vh;
@@ -195,15 +194,6 @@ textarea {
 
 }
 
-.edit {
-    margin-left: 55vw;
-    margin-top: 8vh;
-}
-
-.edit_1{
-    margin-left: 54vw;
-    margin-top: 8vh;
-}
 
 .box {
     height: 80px;
@@ -211,4 +201,89 @@ textarea {
     margin: 0 auto;
     background-color: blueviolet
     
+}
+
+
+//edit
+
+.content_edit {
+    height: 25vh;
+}
+
+.content_edit textarea {
+    width: 54vw;
+    height: 24vh;
+    margin: 0 3vw;
+    font-size: 24px;
+    font-weight: 100;
+    position:absolute;
+    top: 20px;
+    left: 0;
+}
+
+.edit {
+    width: 100px;
+    height: 50px;
+    margin-left: 82%;
+    margin-top: 8vh;
+}
+
+
+
+//show
+.edit_1 {
+    width: 80px;
+    height: 40px;
+    position: absolute;
+    right: 0px;
+    margin-left: 82%;
+}
+
+.content_show {
+    padding: 30px 0px;
+    height:250px;
+
+}
+
+.posts-show_1 {
+    width: 60vw;
+    height: 300px;
+    margin: 100px auto;
+    background-color: rgba(0, 0, 0, 0.1);
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    position:relative;
+
+}
+//???
+
+.savebutton {
+    width: 100%;
+}
+
+a {
+    text-decoration: none;
+}
+
+.submit {
+    margin-left:56vw;
+    margin-top: 240px;
+}
+
+//many
+
+.newfix {
+    position: fixed;
+    bottom: -150px;
+    right: -60px;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.4);
+
+     p {
+         font-size: 36px;
+         margin-top: 80px;
+         margin-left: 70px;
+     }
 }
